Data cleaning for contact done

--- a/exploratory_analysis/contact_details.ipynb
+++ b/exploratory_analysis/contact_details.ipynb
@@ -17,7 +17,8 @@
     "  United States, US, America\n",
     "\n",
     "  United Kingdom, Uk, UK\n",
-    "- Compay_name column has different subsidiaries of the same company. (Need clarification)"
+    "- Compay_name column has different subsidiaries of the same company. (Need clarification)\n",
+    "- \"Contact Name\" and \"Local Salutation\" column can be removed from the data as it is PII data. Data governance."
    ]
   },
   {
