all 3 csv files cleaned

--- a/data_cleaning/email_clean_nb.ipynb
+++ b/data_cleaning/email_clean_nb.ipynb
@@ -175,40 +175,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2ca8716-c0f4-485a-af4e-4d33aa1a913d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Email_Campaign_id    object\n",
-       "contact_id           object\n",
-       "email_subject        object\n",
-       "is_sent               int64\n",
-       "is_delivered          int64\n",
-       "is_link_clicked       int64\n",
-       "is_hard_bounce        int64\n",
-       "is_bounce             int64\n",
-       "is_opt_out            int64\n",
-       "is_open               int64\n",
-       "Sent_date            object\n",
-       "Campaign_type        object\n",
-       "Primary Topic        object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "email_df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "8c19edb0-592d-4244-b39b-363cbf8a8996",
    "metadata": {},
    "outputs": [],
@@ -231,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f754e0c8-93ca-49d3-8d28-92cede28c216",
    "metadata": {},
    "outputs": [
@@ -257,7 +223,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9f7af7ee-f1ae-4b50-b660-a6ade64724f2",
    "metadata": {},
    "outputs": [
@@ -305,8 +271,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b31d03fe-5e00-4cb5-a360-8ac6f412dc41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## drop 3 rows where email is not opened but link is clicked\n",
+    "\n",
+    "email_df.drop(email_df[(email_df[\"is_open\"] == 0) & (email_df[\"is_link_clicked\"] == 1)].index,\n",
+    "              inplace=True\n",
+    "             )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "75a744d5-ad35-4e7d-a4f2-634aa65ab4c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_email_path = \"../cleaned_data/email_campaign_cleaned.csv\"\n",
+    "email_df.to_csv(clean_email_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a668b79-2ef8-4ca8-9691-462b11bf9b87",
    "metadata": {},
    "outputs": [],
    "source": []
