--- a/exploratory_analysis/web_traffic.ipynb
+++ b/exploratory_analysis/web_traffic.ipynb
@@ -18,6 +18,7 @@
     "\n",
     "  Visit date should be date_time\n",
     "\n",
+    "- \"Traffic Source\" has same value but different spellings\n",
     "- Primary topic has NULL values\n",
     "- Need to understand what \"Page title\" and \"Actions\" are.\n",
     "- \"Primary Topic\" has different spellings for same word. There are special characters like (; / 4345 test)\n",
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "73fe70f7-2840-4bd0-b0e3-9f2adaec3e30",
    "metadata": {},
    "outputs": [
@@ -595,7 +596,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "ffdf1f27-c6e4-41ba-b240-6aef05593eee",
    "metadata": {},
    "outputs": [
@@ -627,7 +628,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,9 +638,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb8ef3f7-ac79-4564-9c60-2a172a526026",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Primary Topic   / ; 4345 test\n",
+    "\n",
+    "- Page Title is mapped to Primary Topic\n",
+    "- All except Home and Contact works fine. They are majorly NULL. Some of them are filled with Fund Universe, /, ; , 4345, test\n",
+    "- test entry can be removed\n",
+    "- Assign \"Undefined\" topic to Home and Contact Page title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "494e5812-3417-4996-85d9-a78c83fa1646",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Page Title  Primary Topic\n",
+       "Funds       Funds            85450\n",
+       "Navigation  Navigation       85356\n",
+       "Strategy    Strategy         51686\n",
+       "Invest      Invest           34309\n",
+       "funds       funds            34304\n",
+       "Home        Fund Universe      490\n",
+       "Contact     Fund Universe      160\n",
+       "Home        /                   74\n",
+       "            ;                   23\n",
+       "Contact     /                   22\n",
+       "            ;                    9\n",
+       "            4345                 1\n",
+       "Home        test                 1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df[web_df[\"Primary Topic\"].notnull()][[\"Page Title\", \"Primary Topic\"]].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f4e052c0-319b-4f3f-a44f-c00d2698ac6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Page Title\n",
+       "Home       102044\n",
+       "Contact     34403\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df[web_df[\"Primary Topic\"].isnull()][\"Page Title\"].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5916fdad-9baf-4de0-b7b5-47470274d12b",
+   "id": "3c61d1dd-943e-426b-8820-1d9ad1e0f0f4",
    "metadata": {},
    "outputs": [],
    "source": []
