session id understanding...

--- a/exploratory_analysis/web_traffic.ipynb
+++ b/exploratory_analysis/web_traffic.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "494e5812-3417-4996-85d9-a78c83fa1646",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "f4e052c0-319b-4f3f-a44f-c00d2698ac6c",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,9 +712,393 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d570b1d2-ed24-4346-ab96-9e3395a2b1ae",
+   "metadata": {},
+   "source": [
+    "### Session ID "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b5e4df15-0f43-480c-86e8-b45e1a644478",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Session ID</th>\n",
+       "      <th>Pageviews</th>\n",
+       "      <th>Visit Date</th>\n",
+       "      <th>Traffic Source</th>\n",
+       "      <th>Actions</th>\n",
+       "      <th>Time spent (in minutes)</th>\n",
+       "      <th>Page Title</th>\n",
+       "      <th>Contact ID</th>\n",
+       "      <th>Primary Topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1-Jan-23</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Contact</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11002963</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1-Jan-23</td>\n",
+       "      <td>Organic</td>\n",
+       "      <td>Srcoll 50%</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Contact</td>\n",
+       "      <td>00v2000000KLfqsAAD</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11000521</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1-Jan-23</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>Srcoll 50%</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>00v2000000KO68GAAT</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11001502</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1-Jan-23</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Contact</td>\n",
+       "      <td>00v2000000KrZiaAAF</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11001448</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1-Jan-23</td>\n",
+       "      <td>Organic</td>\n",
+       "      <td>Login</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>00v2000000ez1ucAAA</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Session ID  Pageviews Visit Date Traffic Source     Actions  \\\n",
+       "0    11002649          4   1-Jan-23       LinkedIn    Download   \n",
+       "1    11002963          5   1-Jan-23        Organic  Srcoll 50%   \n",
+       "2    11000521          7   1-Jan-23         Google  Srcoll 50%   \n",
+       "3    11001502          5   1-Jan-23       LinkedIn    Download   \n",
+       "4    11001448          6   1-Jan-23        Organic       Login   \n",
+       "\n",
+       "   Time spent (in minutes) Page Title          Contact ID  Primary Topic  \n",
+       "0                        9    Contact  00v2000000KM7EdAAL  Fund Universe  \n",
+       "1                       13    Contact  00v2000000KLfqsAAD  Fund Universe  \n",
+       "2                        3       Home  00v2000000KO68GAAT  Fund Universe  \n",
+       "3                       14    Contact  00v2000000KrZiaAAF  Fund Universe  \n",
+       "4                        3       Home  00v2000000ez1ucAAA  Fund Universe  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "94a67304-0aa6-4213-bbc3-cf6ec81c144c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Session ID</th>\n",
+       "      <th>Pageviews</th>\n",
+       "      <th>Visit Date</th>\n",
+       "      <th>Traffic Source</th>\n",
+       "      <th>Actions</th>\n",
+       "      <th>Time spent (in minutes)</th>\n",
+       "      <th>Page Title</th>\n",
+       "      <th>Contact ID</th>\n",
+       "      <th>Primary Topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1-Jan-23</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Contact</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1217</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2-Jan-23</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Scroll 100%</td>\n",
+       "      <td>7</td>\n",
+       "      <td>funds</td>\n",
+       "      <td>00v2000000KWVjeAAH</td>\n",
+       "      <td>funds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4088</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4-Jan-23</td>\n",
+       "      <td>Organic</td>\n",
+       "      <td>Video</td>\n",
+       "      <td>8</td>\n",
+       "      <td>funds</td>\n",
+       "      <td>00v2000000KLpkHAAT</td>\n",
+       "      <td>funds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6631</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7-Jan-23</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Scroll 75%</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Funds</td>\n",
+       "      <td>00v2000000KMNBTAA5</td>\n",
+       "      <td>Funds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11504</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11-Jan-23</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Srcoll 50%</td>\n",
+       "      <td>11</td>\n",
+       "      <td>funds</td>\n",
+       "      <td>00v2000000ZCEVVAA5</td>\n",
+       "      <td>funds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>426263</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15-Feb-24</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>CTA</td>\n",
+       "      <td>11</td>\n",
+       "      <td>funds</td>\n",
+       "      <td>00v2000000KNzJUAA1</td>\n",
+       "      <td>funds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>426554</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15-Feb-24</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>CTA</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Navigation</td>\n",
+       "      <td>00v2000000TKvPaAAL</td>\n",
+       "      <td>Navigation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>427901</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>6</td>\n",
+       "      <td>16-Feb-24</td>\n",
+       "      <td>Organic</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Funds</td>\n",
+       "      <td>00v2000000SJKgSAAX</td>\n",
+       "      <td>Funds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>427944</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16-Feb-24</td>\n",
+       "      <td>Organic</td>\n",
+       "      <td>CTA</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Funds</td>\n",
+       "      <td>00v2000000OSlV4AAL</td>\n",
+       "      <td>Funds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>428246</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16-Feb-24</td>\n",
+       "      <td>Youtube</td>\n",
+       "      <td>Srcoll 50%</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>00v2000000dyEtdAAE</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>131 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Session ID  Pageviews Visit Date Traffic Source      Actions  \\\n",
+       "0         11002649          4   1-Jan-23       LinkedIn     Download   \n",
+       "1217      11002649          5   2-Jan-23       LinkedIn  Scroll 100%   \n",
+       "4088      11002649          1   4-Jan-23        Organic        Video   \n",
+       "6631      11002649          4   7-Jan-23       LinkedIn   Scroll 75%   \n",
+       "11504     11002649          3  11-Jan-23       LinkedIn   Srcoll 50%   \n",
+       "...            ...        ...        ...            ...          ...   \n",
+       "426263    11002649          4  15-Feb-24         Google          CTA   \n",
+       "426554    11002649          7  15-Feb-24       LinkedIn          CTA   \n",
+       "427901    11002649          6  16-Feb-24        Organic     Download   \n",
+       "427944    11002649          3  16-Feb-24        Organic          CTA   \n",
+       "428246    11002649          4  16-Feb-24        Youtube   Srcoll 50%   \n",
+       "\n",
+       "        Time spent (in minutes)  Page Title          Contact ID  Primary Topic  \n",
+       "0                             9     Contact  00v2000000KM7EdAAL  Fund Universe  \n",
+       "1217                          7       funds  00v2000000KWVjeAAH          funds  \n",
+       "4088                          8       funds  00v2000000KLpkHAAT          funds  \n",
+       "6631                          4       Funds  00v2000000KMNBTAA5          Funds  \n",
+       "11504                        11       funds  00v2000000ZCEVVAA5          funds  \n",
+       "...                         ...         ...                 ...            ...  \n",
+       "426263                       11       funds  00v2000000KNzJUAA1          funds  \n",
+       "426554                        6  Navigation  00v2000000TKvPaAAL     Navigation  \n",
+       "427901                        1       Funds  00v2000000SJKgSAAX          Funds  \n",
+       "427944                        6       Funds  00v2000000OSlV4AAL          Funds  \n",
+       "428246                       13        Home  00v2000000dyEtdAAE            NaN  \n",
+       "\n",
+       "[131 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df[web_df[\"Session ID\"] == 11002649]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4b52ce09-c2c8-4c45-807a-54de1da73524",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Contact ID\n",
+       "00v2000000KZAdeAAH    2\n",
+       "00v2000000KXc97AAD    2\n",
+       "00v2000000gTNqYAAW    2\n",
+       "00v2000000KMF2vAAH    2\n",
+       "00v2000000KrhxSAAR    2\n",
+       "                     ..\n",
+       "00v2000000KXimcAAD    1\n",
+       "00v2000000MibWDAAZ    1\n",
+       "00v2000000M5ajtAAB    1\n",
+       "00v2000000KXvfnAAD    1\n",
+       "00v2000000dyEtdAAE    1\n",
+       "Name: count, Length: 126, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df[web_df[\"Session ID\"] == 11002649][\"Contact ID\"].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c61d1dd-943e-426b-8820-1d9ad1e0f0f4",
+   "id": "ec40152c-a1a9-4b41-8c30-f371e41a4d6c",
    "metadata": {},
    "outputs": [],
    "source": []
